2020-02-03  Allen D. Ball  <ball@hcf.dev>

	* License under Apache License, Version 2.0.

2020-02-02  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Started development of 1.2-SNAPSHOT.

2020-01-30  Allen D. Ball  <ball@hcf.dev>

	* pom.xml: Released version 1.1.0.

2020-01-18  Allen D. Ball  <ball@hcf.dev>

	* pom.xml:
	Released version 1.0.3.
	Use ball:parent:20200117.0.

2020-01-02  Allen D. Ball  <ball@hcf.dev>

	* pom.xml:
	Released version 1.0.2.
	Use ball:parent:20200102.0.

2019-12-06  Allen D. Ball  <ball@hcf.dev>

	* pom.xml:
	Released version 1.0.1.
	Use ball:parent:20191206.0.

2018-07-31  Allen D. Ball  <ball@sol.local>

	* pom.xml: Released version 1.0.0.

2018-07-26  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/databind/UNIXTimeStampDeserializer.java,
	src/main/java/ball/databind/UNIXTimeStampSerializer.java:
	Initial writing.

2018-07-23  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/databind/JSONBean.java,
	src/main/java/ball/databind/JSONBeanTypeMap.java:
	Record the ObjectCodec (ObjectMapper) that was used to deserialize
	the JSONBean.  Added nodeAt(String) and textAt(String).

2018-03-03  Allen D. Ball  <ball@sol.local>

	* src/main/java/ball/databind/JSONBean.java:
	Implement Serializable.

2017-10-18  Allen D. Ball  <ball@sol>

	* src/main/java/ball/databind/PolymorphicTypeMap.java:
	Infer containing package if not specified.

2017-10-17  Allen D. Ball  <ball@sol>

	* Replaced JSONBeanSerializer with JSONBeanSerializerModifier.
	Moved JSONBean BeanDeserializerModifier implementation to
	PolymorphicTypeMap.

2017-09-16  Allen D. Ball  <ball@sol>

	* src/main/java/ball/databind/JSONBeanSerializer.java:
	Initial writing.

	* src/main/java/ball/databind/JSONBeanDeserializer.java:
	Added generic parameter.

2017-09-15  Allen D. Ball  <ball@sol>

	* src/main/java/ball/databind/PolymorphicTypeMap.java:
	Initial writing.

2017-09-13  Allen D. Ball  <ball@sol>

	* src/main/java/ball/databind/AbstractObjectMapperConfiguration.java: