@@ -1,10 +1,25 @@
-/*
- * $Id$
- *
- * Copyright 2017, 2018 Allen D. Ball.  All rights reserved.
- */
 package ball.databind;
-
+/*-
+ * ##########################################################################
+ * Data Binding Utilities
+ * $Id$
+ * $HeadURL$
+ * %%
+ * Copyright (C) 2016 - 2020 Allen D. Ball
+ * %%
+ * Licensed under the Apache License, Version 2.0 (the "License");
+ * you may not use this file except in compliance with the License.
+ * You may obtain a copy of the License at
+ *
+ *      http://www.apache.org/licenses/LICENSE-2.0
+ *
+ * Unless required by applicable law or agreed to in writing, software
+ * distributed under the License is distributed on an "AS IS" BASIS,
+ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+ * See the License for the specific language governing permissions and
+ * limitations under the License.
+ * ##########################################################################
+ */
 import ball.util.EnumLookupMap;
 import ball.util.PropertiesImpl;
 import com.fasterxml.jackson.databind.ObjectMapper;
