@@ -1,3 +1,7 @@
+2020-02-04  Allen D. Ball  <ball@hcf.dev>
+
+	* Generated license-maven-plugin:update-file-header headers.
+
 2020-02-03  Allen D. Ball  <ball@hcf.dev>
 
 	* License under Apache License, Version 2.0.
